package agh.wfiis.weather.principal.repository;

import agh.wfiis.weather.principal.model.ProjectEntity;
import org.springframework.data.repository.CrudRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface ProjectRepository extends CrudRepository<ProjectEntity, Long> {
    void deleteAllByName(String name);
}
